--- a/.env
+++ b/.env
@@ -28,5 +28,8 @@ APP_SECRET=9266306c09f5236648680b09eaab18e4
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+DATABASE_URL="mysql://root:@127.0.0.1:3306/biblioteka?serverVersion=mariadb-10.4.17"
+
