--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^4.6.0"
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.5.1",
+        "popper.js": "^1.16.1",
+        "summernote": "^0.8.18"
     }
 }
